09-microservicio-spring/k8s/20-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-api
  namespace: dev
  labels:
    app: products-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: products-api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: products-api
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1001
      containers:
        - name: products-api
          image: products-api:1.0.0
          imagePullPolicy: IfNotPresent      # la imagen se carga con "kind load docker-image"
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: 200m
              memory: 384Mi
            limits:
              memory: 768Mi
          startupProbe:
            httpGet:
              path: /actuator/health/liveness
              port: http
            periodSeconds: 5
            failureThreshold: 36        # hasta 3 min para arrancar
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: http
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: http
            periodSeconds: 20
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
