09-microservicio-spring/k8s/30-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: products-api
  namespace: dev
  labels:
    app: products-api
spec:
  selector:
    app: products-api
  ports:
    - name: http
      port: 8080
      targetPort: http
